nextcloud/nextcloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: production
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: nextcloud
          image: nextcloud:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-volume
              subPath: data
      volumes:
        - name: nextcloud-volume
          persistentVolumeClaim:
            claimName: nextcloud-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: production
  labels:
    app: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
