nextcloud/nfs.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-nfs
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-nfs
  template:
    metadata:
      labels:
        app: nextcloud-nfs
    spec:
      containers:
        - name: nfs-server
          image: ghcr.io/trexx/docker-nfs-server:latest
          imagePullPolicy: Always
          ports:
            - name: nfsv4
              containerPort: 2049
              protocol: TCP
          securityContext:
            privileged: true
            capabilities:
              add:
                - "SYS_ADMIN"
          volumeMounts:
            - mountPath: /data
              name: nextcloud-nfs-data
              readOnly: false
            - name: nfs-exports
              mountPath: /var/lib/nfs/etab
              subPath: etab
              readOnly: true
      volumes:
        - name: modules
          hostPath:
            path: /lib/modules
        - name: nfs-exports
          configMap:
            name: nextcloud-nfs-cm
        - name: nextcloud-nfs-data
          persistentVolumeClaim:
            claimName: nextcloud-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-nfs
  namespace: production
spec:
  type: ClusterIP
  ports:
    - port: 2049
  selector:
    app: nextcloud-nfs
  clusterIP: 10.96.172.229
---
# apiVersion: networking.k8s.io/v1 # TODO
# kind: NetworkPolicy
# metadata:
#   name: nextcloud-nfs
#   namespace: production
# spec:
#   podSelector:
#     matchLabels:
#       app: nextcloud-nfs
#   policyTypes:
#   - Egress
#   - Ingress
#   egress:
#   - to:
#     - podSelector:
#         matchLabels:
#           app: nextcloud
#   ingress:
#   - from:
#     - podSelector:
#         matchLabels:
#           app: nextcloud
